teampassword_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  generation: 2
  labels:
    app: teampassword
  name: teampassword
  namespace: teampassword
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: teampassword
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: teampassword
    spec:
      volumes:
        - name: tpm-pv
          persistentVolumeClaim:
            claimName: tpm-pvc
      containers:
      - env:
        - name: TPM_SERVER_TIMEZONE
          value: Etc/UTC
        - name: TPM_PHP_TIMEZONE
          value: Etc/UTC
        - name: TPM_ENCRYPT_DB_CONFIG
          value: "0"
        - name: TPM_CONFIG_HOSTNAME
          value: mysql
        - name: TPM_CONFIG_PORT
          value: "3306"
        - name: TPM_CONFIG_USERNAME
          value: tpm_user
        - name: TPM_CONFIG_PASSWORD
          value: tpm_password
        - name: TPM_CONFIG_DATABASE
          value: tpm_database
        - name: TPM_UPGRADE
          value: "0"
        image: teampasswordmanager/teampasswordmanager:latest
        imagePullPolicy: Always
        name: teampasswordmanager
        volumeMounts:
        - mountPath: "/var/www/html"
          name: tpm-pv
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
