teampassword_mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: teampassword
  labels:
    app: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: tcp
      protocol: TCP
      port: 3306
