teampassword_svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/ip-allocated-from-pool: first-pool
  creationTimestamp: "2023-09-13T08:20:58Z"
  labels:
    app: teampassword
  name: teampassword
  namespace: teampassword
  resourceVersion: "2776124"
  uid: f073cc34-d409-4a9d-85ad-43b584b22445
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.233.13.166
  clusterIPs:
  - 10.233.13.166
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30568
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: teampassword
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.55.226
