teampassword_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  generation: 1
  name: tpm-ingress
  namespace: teampassword
spec:
  rules:
  - host: tpm.nelium.net
    http:
      paths:
      - backend:
          service:
            name: teampassword
            port:
              number: 443
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
